# src/main/resources/static/openapi.yaml
@@ -1510,6 +1510,8 @@ components:
         groupBy:
           example: false
           type: boolean
+        sort:
+          type: boolean
     FilterDto:
       type: object
       properties:
@@ -1527,20 +1529,19 @@ components:
       type: object
       properties:
         content:
+          example: []
           description: filtering and sorting result
           type: array
           items:
             "$ref": "#/components/schemas/Person"
         number:
-          example: 1
+          example: 0
           type: integer
           format: int32
         size:
-          example: 1
+          example: 10
           type: integer
           format: int32
-        pageable:
-          "$ref": "#/components/schemas/PageableObject"
         totalElements:
           type: integer
           format: int64
@@ -1551,32 +1552,6 @@ components:
           format: int32
         first:
           type: boolean
-        sort:
-          "$ref": "#/components/schemas/Sort"
-        numberOfElements:
-          type: integer
-          format: int32
-        empty:
-          type: boolean
-    PageableObject:
-      type: object
-      properties:
-        pageNumber:
-          type: integer
-          format: int32
-        pageSize:
-          type: integer
-          format: int32
-        sort:
-          "$ref": "#/components/schemas/Sort"
-        paged:
-          type: boolean
-        unpaged:
-          type: boolean
-        offset:
-          example: 0
-          type: integer
-          format: int64
     Person:
       type: object
       properties:
